Add task delete and task edit functions

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <label for="priority">Is it very important?</label>
         <input type="text" name="priority" id="priorityInput" />
         <button class="formButton" type="submit">ADD</button>
-
+        <button class="editFormButton hidden" type="submit">EDIT</button>
         <p class="error"></p>
       </div>
 
@@ -61,6 +61,13 @@
       <main id="projectArea" class="hidden">
         <div class="projectContainer"></div>
       </main>
+      <!-- <aside class="popUpDelete hidden">
+        <div class="">
+          <h3>Are you sure?</h3>
+          <button class="Yes-Delete">Yes,delete</button
+          ><button class="No-Delete">No</button>
+        </div>
+      </aside> -->
     </div>
 
     <script type="module" src="app.js"></script>
