Add todayTasks function that will show all tasks with today's date

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav>
         <h2>MENU</h2>
         <ul>
-          <li>Today Tasks</li>
+          <li id="todayTasks">Today Tasks</li>
 
           <li id="allTasks">All Tasks</li>
         </ul>
@@ -58,6 +58,7 @@
       </div>
 
       <main id="taskArea" class="hidden"></main>
+      <main id="todayTaskArea" class="hidden"></main>
       <main id="projectArea" class="hidden">
         <div class="projectContainer"></div>
       </main>
