--- a/index.html
+++ b/index.html
@@ -53,22 +53,34 @@
         <label for="priority">Is it very important?</label>
         <input type="text" name="priority" id="priorityInput" />
         <button class="formButton" type="submit">ADD</button>
-        <button class="editFormButton hidden" type="submit">EDIT</button>
+
         <p class="error"></p>
       </div>
-
+      <div class="form form-project hidden">
+        <h1>Project</h1>
+        <label for="title">Write a title of your project</label>
+        <input type="text" name="title" />
+        <button id="addProjectButton" type="submit">Add project</button>
+      </div>
       <main id="taskArea" class="hidden"></main>
       <main id="todayTaskArea" class="hidden"></main>
       <main id="projectArea" class="hidden">
-        <div class="projectContainer"></div>
-      </main>
-      <!-- <aside class="popUpDelete hidden">
-        <div class="">
-          <h3>Are you sure?</h3>
-          <button class="Yes-Delete">Yes,delete</button
-          ><button class="No-Delete">No</button>
+        <div class="projectContainer">
+          <h2>Title</h2>
+          <button id="projectButtonTask">New Task</button>
+          <h3>Tasks:</h3>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
+          <div class="task"></div>
         </div>
-      </aside> -->
+      </main>
     </div>
 
     <script type="module" src="app.js"></script>
