Add functions to project.js  that create new project and show  title of it on the projectArea section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="form form-project hidden">
         <h1>Project</h1>
         <label for="title">Write a title of your project</label>
-        <input type="text" name="title" />
+        <input type="text" id="addNewProjectForm" name="title" />
         <button id="addProjectButton" type="submit">Add project</button>
       </div>
       <main id="taskArea" class="hidden"></main>
@@ -69,16 +69,7 @@
           <h2>Title</h2>
           <button id="projectButtonTask">New Task</button>
           <h3>Tasks:</h3>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
-          <div class="task"></div>
+          <div class="tasks-holder"></div>
         </div>
       </main>
     </div>
