I have started coding since start. Write two functions.  buildDom() add all DOM elements to html.  addTaskFunction() contains all the functionalites of the application

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>ToDOList by Lesiuuu</title>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <h1>
         <span style="font-size: 40px" class="material-symbols-outlined">
           done </span
@@ -52,8 +52,8 @@
 
       <main id="taskArea" class="hidden"></main>
       <main id="todayTaskArea" class="hidden"></main>
-    </div>
+    </div> -->
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
